--- a/sample.env
+++ b/sample.env
@@ -3,4 +3,4 @@ API_HASH=""
 BOT_TOKEN=""
 MONGO_DB_URI=""
 LOG_ID=
-SUDOERS=        #add multiple by adding space between user ids.
+SUDOERS=        #add multiple by adding space between use
